# bletchmame_rs

./: .gitignore  Cargo.toml  README.md  bletchmame.wxs  build.rs
.github/: copilot-instructions.md
.github/workflows/: audit.yml  clippy_check.yml  cross_compile.yml  diagnostics.yml  general.yml  grcov.yml  guitests.yml  linting.yml  linux.yml  test.yml  windows.yml  windows_release.yml
plugins/worker_ui/: init.lua
scripts/: change_screen_resolution.py  prepare_desktop.py  run_mame_integration_testing.sh  setup_mame.py  test_mame_interactions.sh
scripts/guitests/: 001_start_and_exit.py  002_setup_mame.py  003_import_mame_ini.py  004_toggle_fullscreen.py  01_start_and_exit.py  02_setup_mame.py  common.py
src/: action.rs  appcommand.rs  appstate.rs  appwindow.rs  assethash.rs  audit.rs  canceller.rs  channel.rs  childwindow.rs  collections.rs  console.rs  debugstr.rs  devimageconfig.rs  diagnostics.rs  error.rs  history.rs  icon.rs  imagedesc.rs  importmameini.rs  interaction_monitor.rs  job.rs  loading.rs  main.rs  mconfig.rs  parse.rs  prefs.rs  prefs_fresh.json  selection.rs  snapview.rs  threadlocalbubble.rs  version.rs  xml.rs
src/audit/: mod.rs
src/audit/snapshots/: bletchmame__audit__tests__assets_from_machine_config@alienar.snap  bletchmame__audit__tests__assets_from_machine_config@blah.snap  bletchmame__audit__tests__assets_from_machine_config@c64.snap  bletchmame__audit__tests__assets_from_machine_config@coco2b.snap  bletchmame__audit__tests__assets_from_machine_config@fake.snap  bletchmame__audit__tests__assets_from_machine_config@fakefake.snap  bletchmame__audit__tests__assets_from_machine_config@phony_withbios.snap  bletchmame__audit__tests__assets_from_machine_config@phony_withbios_alpha.snap  bletchmame__audit__tests__assets_from_machine_config@phony_withbios_bravo.snap
src/audit/test_data/: 7zarchive01.7z
src/backend/: mod.rs  qt.rs  winit.rs
src/chd/: mod.rs
src/childwindow/: mod.rs  qt.rs  winit.rs
src/diagnostics/: mod.rs  script.rs
src/dialogs/: about.rs  builtincollections.rs  cheats.rs  configure.rs  devimages.rs  file.rs  image.rs  importmameini.rs  input.rs  input_multi.rs  loading.rs  messagebox.rs  mod.rs  namecollection.rs  newcollection.rs  paths.rs  seqpoll.rs  socket.rs  stopwarning.rs  switches.rs  video.rs
src/dialogs/input/: mod.rs  multi.rs  primary.rs  xy.rs
src/guiutils/: childwnd.rs  component.rs  hook.rs  menuing.rs  mod.rs  modal.rs  windowing.rs
src/history_xml/: markdown.rs  mod.rs  parse.rs
src/history_xml/test_data/: history.xml
src/info/: binary.rs  build.rs  entities.rs  mod.rs  smallstr.rs  strings.rs
src/info/test_data/: listxml_c64.xml  listxml_coco.xml  listxml_fake.xml
src/models/: audit.rs  collectionstree.rs  collectionsview.rs  devimages.rs  itemstable.rs  mod.rs  tree.rs
src/platform/: mod.rs  other.rs  unix.rs  windows.rs
src/platform/windows/: childwnd.rs  menuing.rs  mod.rs
src/prefs/: mod.rs  pathtype.rs  preflight.rs  prefs_fresh.json  serde_slots.rs  var.rs
src/prefs/snapshots/: bletchmame__prefs__test__fresh.snap  bletchmame__prefs__test__reserialization@0.snap
src/prefs/test_data/: prefs01.json
src/runtime/: args.rs  command.rs  controller.rs  mod.rs  session.rs  status.rs  watchdog.rs
src/software/: mod.rs  process.rs  strings.rs
src/status/: mod.rs  parse.rs  validate.rs
src/status/test_data/: status_mame0226_coco2b_1.xml  status_mame0227_coco2b_1.xml  status_mame0270_1.xml  status_mame0270_coco2b_1.xml  status_mame0270_coco2b_2.xml  status_mame0270_coco2b_3.xml  status_mame0270_coco2b_4.xml  status_mame0270_coco2b_5.xml  status_mame0273_alienar_1.xml  status_mame0273_c64_1.xml  status_mame0273_c64_epyxfast_1.xml
ui/: about.slint  appwindow.slint  audit.slint  builtincollections.slint  cheats.slint  common.slint  configure.slint  devimages.slint  devimageslist.slint  icons.slint  importmameini.slint  input.slint  input_multi.slint  input_xy.slint  loading.slint  main.slint  messagebox.slint  namecollection.slint  newcollection.slint  paths.slint  report.slint  seqpoll.slint  socket.slint  splitter.slint  splitter_demo.slint  stopwarning.slint  switches.slint  tapecontrol.slint  tooltip.slint  treeview.slint  video.slint  videoconfig.slint
ui/dialogs/: about.slint  cheats.slint  configure.slint  devimages.slint  importmameini.slint  messagebox.slint  namecollection.slint  paths.slint  seqpoll.slint  socket.slint  stopwarning.slint  switches.slint  video.slint
ui/dialogs/input/: input.slint  input_multi.slint  input_xy.slint
