[package]
authors = ["Bletch <npwoods@alumni.cmu.edu>"]
edition = "2024"
name = "bletchmame"
version = "0.3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.99"
binary-search = "0.1.2"
byte-unit = "5.1.6"
byteorder = "1.5.0"
console = { version = "0.16.0", optional = true }
cpp = "0.5.10"
crc32fast = "1.5.0"
default-ext = "0.1.0"
dirs = "6.0.0"
dpi = "0.1.1"
easy-ext = "1.0.2"
hex = "0.4.3"
hostname-validator = "1.1.1"
image = "0.25.8"
is_executable = "1.0.5"
itertools = "0.14.0"
levenshtein = "1.0.5"
more-asserts = "0.3.1"
nu-utils = "0.108.0"
num = "0.4.3"
open = "5.3.3"
parallel_worker = "1.0.2"
path-absolutize = "3.1.1"
qttypes = { version = "0.2.12", optional = true }
quick-xml = "0.38.3"
raw-window-handle = "0.6.2"
rfd = "0.15.1"
serde = { version = "1.0.219", features = ["rc"] }
serde_json = "1.0.143"
sha1 = "0.10.6"
smallvec = "1.15.0"
smol_str = { version = "0.3.2", features = ["serde"] }
structopt = "0.3.26"
strum = { version = "0.27.1", features = ["derive"] }
strum_macros = "0.27.1"
thiserror = "2.0.16"
throttle = "0.1.0"
tokio = { version = "1.44.2", features = [
    "rt",
    "rt-multi-thread",
    "time",
    "sync",
] }
tracing = { version = "0.1.41", features = [
    "max_level_trace",
    "release_max_level_info",
] }
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
unicase = "2.8.1"
uuid = { version = "1.18.1", features = ["v4"] }
winit = "0.30.3"
zerocopy = { version = "0.8.28", features = ["derive"] }
zip = "6.0.0"

# Slint dependencies
i-slint-backend-qt = { git = "https://github.com/npwoods/slint.git", rev = "88d9a980e7f0b5b436f47ed3d09866973c6992e7", optional = true }
i-slint-backend-winit = { git = "https://github.com/npwoods/slint.git", rev = "88d9a980e7f0b5b436f47ed3d09866973c6992e7" }
i-slint-common = { git = "https://github.com/npwoods/slint.git", rev = "88d9a980e7f0b5b436f47ed3d09866973c6992e7" }
i-slint-core = { git = "https://github.com/npwoods/slint.git", rev = "88d9a980e7f0b5b436f47ed3d09866973c6992e7" }
slint = { git = "https://github.com/npwoods/slint.git", rev = "88d9a980e7f0b5b436f47ed3d09866973c6992e7", features = [
    "raw-window-handle-06",
] }
showfile = "0.1.1"
primal = "0.3.3"

[target.'cfg(target_os = "windows")'.dependencies.windows]
features = [
    "Win32",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System",
    "Win32_System_Console",
    "Win32_System_IO",
    "Win32_System_Pipes",
    "Win32_System_Threading",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
]
version = "0.62.0"

[target.'cfg(target_os = "windows")'.dependencies.win32job]
version = "2.0.2"

[dev-dependencies]
assert_matches = "1.5.0"
tempdir = "0.3.7"
test-case = "3.3.1"

[build-dependencies]
cpp_build = "0.5.10"
ico = "0.4.0"
slint-build = { git = "https://github.com/npwoods/slint.git", rev = "88d9a980e7f0b5b436f47ed3d09866973c6992e7" }
slint-material-components = { git = "https://github.com/npwoods/slint.git", rev = "88d9a980e7f0b5b436f47ed3d09866973c6992e7" }
winresource = "0.1.20"

[profile.dev]
opt-level = 0
panic = "abort"

[profile.release]
lto = "fat"
opt-level = "s"
panic = "abort"

[features]
default = ["diagnostics"]
diagnostics = ["dep:console"]
slint-qt-backend = ["dep:i-slint-backend-qt", "dep:qttypes"]
