[package]
authors = ["Bletch <npwoods@alumni.cmu.edu>"]
edition = "2024"
name = "bletchmame"
version = "0.3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.102"
binary-search = "0.1.3"
byte-unit = "5.2.0"
byteorder = "1.5.0"
clap = { version = "4", features = ["derive"] }
console = "0.16.3"
cpp = "0.5.11"
crc32fast = "1.5.0"
default-ext = "0.1.0"
dirs = "6.0.0"
dpi = "0.1.2"
easy-ext = "1.0.3"
glob = { version = "0.3.3", optional = true }
hex = "0.4.3"
hostname-validator = "1.1.1"
image = "0.25.10"
is_executable = "1.0.5"
itertools = "0.14.0"
levenshtein = "1.0.5"
more-asserts = "0.3.1"
nu-utils = "0.109.1"
num = "0.4.3"
open = "5.3.3"
parallel_worker = "1.0.2"
path-absolutize = "3.1.1"
primal = "0.3.3"
qttypes = { version = "0.2.12", optional = true }
quick-xml = "0.38.4"
raw-window-handle = "0.6.2"
rfd = "0.17.2"
serde = { version = "1.0.228", features = ["rc"] }
serde_json = "1.0.149"
serialport = "4.9.0"
sha1 = "0.10.6"
showfile = "0.1.1"
smallvec = "1.15.1"
smol_str = { version = "0.3.6", features = ["serde"] }
splitty = "1.0.2"
strum = { version = "0.27.2", features = ["derive"] }
strum_macros = "0.27.2"
thiserror = "2.0.18"
throttle = "0.1.0"
tokio = { version = "1.52.1", features = [
    "rt",
    "rt-multi-thread",
    "time",
    "sync",
] }
tracing = { version = "0.1.44", features = [
    "max_level_trace",
    "release_max_level_info",
] }
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
unicase = "2.9.0"
uuid = { version = "1.23.1", features = ["v4"] }
winit = "0.30.13"
zerocopy = { version = "0.8.48", features = ["derive"] }
zip = "7.2.0"

# Slint dependencies
i-slint-backend-qt = { git = "https://github.com/npwoods/slint.git", rev = "495f2eca43ff1617bb10e572946b6e4f551ef812", optional = true }
i-slint-backend-winit = { git = "https://github.com/npwoods/slint.git", rev = "495f2eca43ff1617bb10e572946b6e4f551ef812" }
i-slint-common = { git = "https://github.com/npwoods/slint.git", rev = "495f2eca43ff1617bb10e572946b6e4f551ef812" }
i-slint-core = { git = "https://github.com/npwoods/slint.git", rev = "495f2eca43ff1617bb10e572946b6e4f551ef812" }
slint = { git = "https://github.com/npwoods/slint.git", rev = "495f2eca43ff1617bb10e572946b6e4f551ef812", features = [
    "raw-window-handle-06",
] }

[target.'cfg(target_os = "windows")'.dependencies.windows]
features = [
    "Win32",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System",
    "Win32_System_Console",
    "Win32_System_IO",
    "Win32_System_Pipes",
    "Win32_System_Threading",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
]
version = "0.62.2"

[target.'cfg(target_os = "windows")'.dependencies.win32job]
version = "2.0.3"

[dev-dependencies]
assert-json-diff = "2.0.2"
assert_matches = "1.5.0"
tempdir = "0.3.7"
test-case = "3.3.1"

[build-dependencies]
cpp_build = "0.5.11"
ico = "0.5.0"
slint-build = { git = "https://github.com/npwoods/slint.git", rev = "495f2eca43ff1617bb10e572946b6e4f551ef812" }
slint-material-components = { git = "https://github.com/npwoods/slint.git", rev = "495f2eca43ff1617bb10e572946b6e4f551ef812" }
winresource = "0.1.31"

[profile.dev]
opt-level = 0
panic = "abort"

[profile.release]
lto = "fat"
opt-level = "s"
panic = "abort"

[features]
default = ["diagnostics"]
diagnostics = ["dep:glob"]
slint-qt-backend = ["dep:i-slint-backend-qt", "dep:qttypes"]
